xiurui zhao add a line in the latex file

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -25,4 +25,8 @@ Write your subsection text here.
 \section{Conclusion}
 Write your conclusion here.
 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%Here is a Latex comment line added by xiurui zhao%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{document}
